a good days work - server works now! yeah that's pretty much it
